--- a/index.html
+++ b/index.html
@@ -1,18 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta />
+        <title>WEBSTUDIO</title>
+    <!-- logo -->
+    <link rel="" href="" type="" />
+  </head>
+  <body>
+    <!-- header  section -->
     <header>
-        <h1>Effective Solutions for Your Business</h1>
+        <a href="" alt="">
+            WEBSTUDIO
+         </a> 
+        <nav>
+             <li><a href="">Studio</a></li>
+             <li><a href="">Portfolio</a></li>
+             <li><a href="">Contacts</a></li>
+        </nav>
+        <ul>
+            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="">+11 (000) 111-11-11</a></li>
+    
+        </ul>
     </header>
-    <main> 
-        <H2></H2>
+    <!-- main section -->
+    <main>
+        <!-- section 1 -->
+        <section> 
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <!-- section 2 -->
+        <section>
+            <ul>
+                <li>
+                    <h2>Strategy</h2>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. 
+                    </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                    </p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!-- our team section -->
+        <section><h2>Our Team</h2>
+            <ul>
+                 <li> 
+                     <img src="/images/1img.jpg" 
+                     width="264"
+                     height="260"
+                      alt=""
+                     >
+                      <h3>Mark Guerrero</h3>
+                      <p>Product Designer</p>
+                </li>
+                    <li> 
+                       <img src="/images/2img.jpg" 
+                        width="264"
+                        height="260"
+                       alt=""
+                       >
+                       <h3>Tom Ford</h3>
+                       <p>Frontend Developer</p>
+                   </li>
+                    <li> 
+                       <img src="/images/3img.jpg" 
+                       width="264"
+                       height="260"
+                       alt=""
+                       >
+                       <h3>Camila Garcia</h3>
+                       <p>Marketing</p>
+                   </li>
+                    <li> 
+                       <img src="/images/img.jpg" 
+                       width="264"
+                       height="260"
+                       alt="">
+                       <h3>Daniel Wilson</h3>
+                       <p>UI Designer</p>
+                   </li>
+            </ul>
+        </section>    
     </main>
-    <footer>.
-     </footer>
-</body>
+    <!-- footer section -->
+    <footer>
+        <a href="" alt="">
+            WEBSTUDIO
+         </a> 
+         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+         </p>
+    </footer>
+  </body>
 </html>
