--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
   <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta />
         <title>WEBSTUDIO</title>
-    <!-- logo -->
-    <link rel="" href="" type="" />
-  </head>
+     </head>
   <body>
-    <!-- header  section -->
-    <header>
-        <a href="" alt="">
+       <!-- header  section -->
+     <header>
+        <a href="" >
             WEBSTUDIO
          </a> 
         <nav>
@@ -22,9 +19,8 @@
         <ul>
             <li><a href="">info@devstudio.com</a></li>
             <li><a href="">+11 (000) 111-11-11</a></li>
-    
         </ul>
-    </header>
+     </header>
     <!-- main section -->
     <main>
         <!-- section 1 -->
@@ -98,13 +94,13 @@
             </ul>
         </section>    
     </main>
-    <!-- footer section -->
-    <footer>
+        <!-- footer section -->
+        <footer>
         <a href="" alt="">
             WEBSTUDIO
          </a> 
          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
          </p>
-    </footer>
+        </footer>
   </body>
 </html>
