--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             WEBSTUDIO
          </a> 
         <nav>
-             <li><a href="">Studio</a></li>
-             <li><a href="">Portfolio</a></li>
-             <li><a href="">Contacts</a></li>
+            
+             <a href="">Studio</a>
+             <a href="">Portfolio</a>
+             <a href="">Contacts</a>
         </nav>
         <ul>
             <li><a href="">info@devstudio.com</a></li>
