--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <section><h2>Our Team</h2>
             <ul>
                  <li> 
-                     <img src="/images/1img.jpg" 
+                     <img src="/images/1img.jpg"  
                      width="264"
                      height="260"
-                      alt=""
+                      alt="Mark Guerrero"
                      >
                       <h3>Mark Guerrero</h3>
                       <p>Product Designer</p>
@@ -70,7 +70,7 @@
                        <img src="/images/2img.jpg" 
                         width="264"
                         height="260"
-                       alt=""
+                       alt="Frontend Developer"
                        >
                        <h3>Tom Ford</h3>
                        <p>Frontend Developer</p>
@@ -79,7 +79,7 @@
                        <img src="/images/3img.jpg" 
                        width="264"
                        height="260"
-                       alt=""
+                       alt="Camila Garcia"
                        >
                        <h3>Camila Garcia</h3>
                        <p>Marketing</p>
@@ -88,7 +88,7 @@
                        <img src="/images/img.jpg" 
                        width="264"
                        height="260"
-                       alt="">
+                       alt="Daniel Wilson">
                        <h3>Daniel Wilson</h3>
                        <p>UI Designer</p>
                    </li>
