--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section><h2>Our Team</h2>
             <ul>
                  <li> 
-                     <img src="/images/1img.jpg"  
+                     <img src="./images/1img.jpg"  
                      width="264"
                      height="260"
                       alt="Mark Guerrero"
@@ -67,7 +67,7 @@
                       <p>Product Designer</p>
                 </li>
                     <li> 
-                       <img src="/images/2img.jpg" 
+                       <img src="./images/2img.jpg" 
                         width="264"
                         height="260"
                        alt="Frontend Developer"
@@ -76,7 +76,7 @@
                        <p>Frontend Developer</p>
                    </li>
                     <li> 
-                       <img src="/images/3img.jpg" 
+                       <img src="./images/3img.jpg" 
                        width="264"
                        height="260"
                        alt="Camila Garcia"
@@ -85,7 +85,7 @@
                        <p>Marketing</p>
                    </li>
                     <li> 
-                       <img src="/images/img.jpg" 
+                       <img src="./images/img.jpg" 
                        width="264"
                        height="260"
                        alt="Daniel Wilson">
