--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <body>
        <!-- header  section -->
      <header>
-        <a href="" >
+        <nav>
+        <a href=”./index.html” >
             WEBSTUDIO
          </a> 
-        <nav>
-            
-             <a href="">Studio</a>
-             <a href="">Portfolio</a>
-             <a href="">Contacts</a>
-        </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
-        </ul>
+             <li><a href="">Studio</a></li>
+             <li><a href="">Portfolio</a></li>
+             <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address></address>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </address>
      </header>
     <!-- main section -->
     <main>
@@ -31,6 +32,7 @@
         </section>
         <!-- section 2 -->
         <section>
+            <h2>+</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -97,9 +99,9 @@
     </main>
         <!-- footer section -->
         <footer>
-        <a href="">
-            WEBSTUDIO
-         </a> 
+            <a href=”./index.html” >
+                WEBSTUDIO
+             </a>  
          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
          </p>
         </footer>
