--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
        <!-- header  section -->
      <header>
         <nav>
-        <a href=”./index.html” >
-            WEBSTUDIO
+        <a href=”./index.html”>
+            WebStudio
          </a> 
         <ul>
              <li><a href="">Studio</a></li>
@@ -18,7 +18,7 @@
              <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address></address>
+        <address>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </address>
@@ -99,8 +99,8 @@
     </main>
         <!-- footer section -->
         <footer>
-            <a href=”./index.html” >
-                WEBSTUDIO
+            <a href=”./index.html”>
+                WebStudio
              </a>  
          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
          </p>
