--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        <!-- header  section -->
      <header>
         <nav>
-        <a href=”./index.html”>
+        <a href="./index.html">
             WebStudio
          </a> 
         <ul>
@@ -101,9 +101,9 @@
     </main>
         <!-- footer section -->
         <footer>
-            <a href=”./index.html”>
+            <a href="./index.html">
                 WebStudio
-             </a>  
+             </a> 
          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
          </p>
         </footer>
