--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
         <!-- section 2 -->
         <section>
-            <h2>Features</h2>
+            <h2 hidden>Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
